SETUP: Simplifying setup

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,44 @@
 #
-# Copy and rename this file to .env at root of this project.
+# Main project name. THIS MUST BE SET
+#
+PROJECT_NAME=
+
+
+#
+# MySQL Vars
 #
 
-# A common use case is to supply database creds via the environment. Edit settings.php
-# like so:
-#
-# $databases['default']['default'] = [
-#   'database' => getenv('MYSQL_DATABASE'),
-#   'driver' => 'mysql',
-#   'host' => getenv('MYSQL_HOSTNAME'),
-#   'namespace' => 'Drupal\\Core\\Database\\Driver\\mysql',
-#   'password' => getenv('MYSQL_PASSWORD'),
-#   'port' => getenv('MYSQL_PORT'),
-#   'prefix' => '',
-#   'username' => getenv('MYSQL_USER'),
-# ];
-#
-# Uncomment and populate as needed.
-# MYSQL_DATABASE=
-# MYSQL_HOSTNAME=
-# MYSQL_PASSWORD=
-# MYSQL_PORT=
-# MYSQL_USER=
+# Set these if you need to for development
+MYSQL_USER=devuser
+MYSQL_PASSWORD=devpasssword
+
+# For dev this will be set to  `PROJECT_NAME` uncomment this i you need to specify something custom.
+#MYSQL_DATABASE=
+
+# For dev this will be set as `PROJECT_NAME-mariadb`
+#MYSQL_HOSTNAME=
+
+# This defaults to 3306, change it here if you need it to be different
+#MYSQL_PORT=3306
+
+
+#------
+
 
 # Another common use case is to set Drush's --uri via environment.
 # DRUSH_OPTIONS_URI=http://example.com
+
+
+#------
+
+
+#
+# Docker variables
+#
+
+# You can set the base port for the dev containers here, for example if `DEV_DOCKER_PORTPREFIX` is set to 80 then
+#  Mailhog will be on port 8025, Apache will be on 8080, and MariDB will be on 8006.
+DEV_DOCKER_PORTPREFIX=80
+
+# Set this to your host IP for PHP Xdebug connections
+XDEBUG_DEV_IP=false
